# decpy

./: LICENSE  README.md  pyproject.toml
src/pydec/: pydec.py
