[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydec"
version = "0.1.0"
authors = [
  { name="Edward Chang", email="edward.chang@uwaterloo.ca" },
]
description = "Discrete Exterior Calculus in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Edwardtw92/decpy/"
Issues = "https://github.com/Edwardtw92/decpy/issues"
